creating first pages

--- a/front/index.html
+++ b/front/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
     <title>Caketeer</title>
   </head>
   <body>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <div id="root"></div>
+    <style link="./index.css"></style>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
