--- a/front/index.html
+++ b/front/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <div id="root"></div>
-    <style link="./index.css"></style>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
