--- a/front/index.html
+++ b/front/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
-    <title>Caketeer</title>
+    <link rel="icon" href="./src/assets/ico.ico" type="image/x-icon"/>
+    <title>Caketter</title>
   </head>
   <body>
     <script src="https://cdn.tailwindcss.com"></script>
